--- a/xg_work_view/index.html
+++ b/xg_work_view/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>xg_work_view</title>
+    <title>星光钱包</title>
   </head>
   <body>
     <div id="app"></div>
